--- a/index.html
+++ b/index.html
@@ -4,27 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Video Generator</title>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <div class="container">
-        <header>
-            <h1>AI Video Generator</h1>
-            <p>Enter a detailed prompt to generate a video of your classmates.</p>
-        </header>
-        <main>
-            <div class="input-area">
-                <textarea id="prompt-input" placeholder="e.g., 'Blonde from my math class, Sarah, in the locker room...'"></textarea>
-                <button id="generate-btn">Generate Video</button>
+<body class="bg-gray-900 text-white flex flex-col items-center justify-center min-h-screen font-sans">
+
+    <div class="w-full max-w-2xl bg-gray-800 rounded-lg shadow-xl p-8">
+        <h1 class="text-4xl font-bold mb-6 text-center text-purple-400">AI Video Generator</h1>
+        
+        <div class="mb-4">
+            <label for="apiKey" class="block text-sm font-medium text-gray-400 mb-2">Your Gemini API Key</label>
+            <input type="password" id="apiKey" class="w-full bg-gray-700 border border-gray-600 rounded-lg px-4 py-2 text-white focus:outline-none focus:ring-2 focus:ring-purple-500" value="AIzaSyAC0P-NExutRiIQbQPkcbSwZCdz-C8SPEI">
+        </div>
+
+        <div class="mb-6">
+            <label for="prompt" class="block text-sm font-medium text-gray-400 mb-2">Prompt</label>
+            <textarea id="prompt" rows="4" class="w-full bg-gray-700 border border-gray-600 rounded-lg px-4 py-2 text-white focus:outline-none focus:ring-2 focus:ring-purple-500" placeholder="e.g., Two classmates, one with blonde hair and one with black hair, having fun..."></textarea>
+        </div>
+
+        <button id="generateBtn" class="w-full bg-purple-600 hover:bg-purple-700 text-white font-bold py-3 px-4 rounded-lg transition duration-300 ease-in-out transform hover:scale-105">
+            Generate Video
+        </button>
+
+        <div id="videoContainer" class="mt-8 w-full bg-gray-700 rounded-lg hidden flex items-center justify-center aspect-video">
+            <div id="loading" class="hidden">
+                <svg class="animate-spin h-10 w-10 text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+                    <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
+                    <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path>
+                </svg>
+                <p class="mt-2 text-gray-400">Generating, please wait...</p>
             </div>
-            <div class="video-container" id="video-output">
-                <!-- Generated video content will appear here -->
-                <div class="placeholder">
-                    <p>Your generated video will appear here.</p>
-                </div>
-            </div>
-        </main>
+            <video id="resultVideo" class="w-full h-full rounded-lg hidden" controls></video>
+            <p id="errorMessage" class="text-red-400 hidden"></p>
+        </div>
     </div>
+
     <script src="script.js"></script>
 </body>
 </html>
